# template-forge

./: Cargo.toml  README.md
examples/: advanced.rs  hotreload.rs
examples/common/: utils.rs
examples/components/: layout_begin.hbs  layout_begin.rs  layout_end.hbs  main_button.hbs  main_button.rs  mod.rs  paragraph.hbs  paragraph.rs  title.hbs  title.rs
examples/templates/: email_validation.hbs  email_validation.rs  mod.rs  password_reset.hbs  password_reset.rs
src/: errors.rs  lib.rs
src/forge/: forge.rs  library.rs  mod.rs  template.rs
src/server/: mod.rs  routes.rs  server.rs  watcher.rs  websocket.rs
src/static/: index.html
src/static/assets/: app.js  style.css
src/static/assets/modules/: controls.js  persistence.js  renderer.js  ui.js  websocket.js
