[package]
name = "template-forge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
chrono = "0.4.41"
futures-util = "0.3.31"
handlebars = { version = "6.3.2", features = ["dir_source"] }
notify = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
strum = { version = "0.27", features = ["derive"] }
