[package]
name = "template-forge"
version = "0.1.0"
edition = "2024"

[features]
default = []
server = ["axum", "futures-util", "notify", "tokio", "tower", "tower-http", "tracing", "tracing-subscriber"]

[dependencies]
handlebars = { version = "6.3.2", features = ["dir_source"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
strum = { version = "0.27", features = ["derive"] }

axum = { version = "0.8.4", features = ["ws"], optional = true }
futures-util = { version = "0.3.31", optional = true }
notify = { optional = true, version = "8.0.0" }
tokio = { version = "1.45.1", features = ["full"], optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.6", features = ["fs"], optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { optional = true, version = "0.3.19" }
